terminado a configuracao da tab

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,13 +28,17 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/add_tab"
-        android:background="#FF00FF"
-        android:layout_width="match_parent"
+        app:tabMode="auto"
+        app:tabIndicatorFullWidth="false"
+        app:tabIndicatorHeight="1dp"
+        app:tabIndicatorColor="@color/red"
+        app:tabSelectedTextColor="@color/red"
+        app:tabTextColor="@color/gray"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/add_viewpager"
-        android:background="#0000FF"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
